typescript/checker/tests/conformance/types/typeRelationships/assignmentCompatibility/typeParameterAssignability.ts.stderr
error: AssignFailed {
    span: Span {
        lo: BytePos(
            151,
        ),
        hi: BytePos(
            152,
        ),
        ctxt: #0,
    },
    left: Param(
        Param {
            span: Span {
                lo: BytePos(
                    126,
                ),
                hi: BytePos(
                    127,
                ),
                ctxt: #0,
            },
            name: Atom('T' type=inline),
            constraint: None,
            default: None,
        },
    ),
    right: Param(
        Param {
            span: Span {
                lo: BytePos(
                    155,
                ),
                hi: BytePos(
                    156,
                ),
                ctxt: #0,
            },
            name: Atom('U' type=inline),
            constraint: None,
            default: None,
        },
    ),
    cause: [],
}
 --> $DIR/tests/conformance/types/typeRelationships/assignmentCompatibility/typeParameterAssignability.ts:4:5
  |
4 |     t = u; // error
  |     ^

error: AssignFailed {
    span: Span {
        lo: BytePos(
            172,
        ),
        hi: BytePos(
            173,
        ),
        ctxt: #0,
    },
    left: Param(
        Param {
            span: Span {
                lo: BytePos(
                    129,
                ),
                hi: BytePos(
                    130,
                ),
                ctxt: #0,
            },
            name: Atom('U' type=inline),
            constraint: None,
            default: None,
        },
    ),
    right: Param(
        Param {
            span: Span {
                lo: BytePos(
                    176,
                ),
                hi: BytePos(
                    177,
                ),
                ctxt: #0,
            },
            name: Atom('T' type=inline),
            constraint: None,
            default: None,
        },
    ),
    cause: [],
}
 --> $DIR/tests/conformance/types/typeRelationships/assignmentCompatibility/typeParameterAssignability.ts:5:5
  |
5 |     u = t; // error
  |     ^

